test/compile-fail/resolution/use/private-glob/top.rhdl
mod a {
    struct X {}
}

use a::*;

struct Y(X);
